syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option java_multiple_files = true;
option java_package = "hacontract";

package hacontract; // package do proto

service HAProtocol {
    rpc obtainLocationReport (GetLocation) returns (LocationStatus);
    rpc obtainUsersAtLocation (UserAtLocation) returns (Users);
}

message GetLocation {
    string message = 1;
}
message LocationStatus {
    string message = 1;
}
message UserAtLocation {
    string message = 1;
}

message Users {
    string message = 1;
}


